--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 
 [dependencies]
 reqwest = { version = "0.11", features = ["json", "blocking"] }
-tokio = { version = "1", features = ["full"] }
+#tokio = { version = "1", features = ["full"] }
 rust-ini = "0.17"
 log = "0.4"
-flexi_logger = { version = "0.17", default_features = false }
+flexi_logger = { version = "0.19.6", default_features = false, features = ["colors"] }
 bitmask-enum = "1.1.0"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
@@ -20,6 +20,7 @@ hmac = "0.10.1"
 hex = "0.4.3"
 libmath = "0.2.1"
 websocket = "0.26.2"
+chrono = "0.4"
 
 [profile.release]
 lto=true
